# aci-webapp-backend

./: .gitignore  CMakeLists.txt  IdentityClassifier.cpp  IdentityClassifier.hpp  Makefile  README.md  aci.c  aci.cpp  aci.h
saliency/: ContextAwareSaliency.cpp  ContextAwareSaliency.hpp  SpectralResidualSaliency.cpp  SpectralResidualSaliency.cpp~  SpectralResidualSaliency.hpp  SpectralResidualSaliency.hpp~
test/: GrabcutTest.cpp
test/saliency/: SpectralResidualSaliencyTest.cpp
